--- a/team_challenge/tercero/toolbox.ipynb
+++ b/team_challenge/tercero/toolbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 2,
    "id": "934736fb-9604-4a99-9808-e8daa3aea56a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 3,
    "id": "e958cccf-e70c-469f-87cf-5ebbb4fd7882",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 4,
    "id": "7aca7a16-4caa-473b-b5b0-3cf9177e8672",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 5,
    "id": "fb27737b-6955-44f3-ad78-947d73f73928",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "freq         5  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 6,
    "id": "9b5c81ca-5e86-4fcb-89d2-652ff5663393",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "4  24.11.2023  15.980,11  15.972,89  16.007,42  15.940,62   68,57M  -0,13%"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 7,
    "id": "345e4ba4",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 8,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 9,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 11,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 12,
    "id": "4a40612f",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[503 rows x 7 columns]"
       ]
      },
-     "execution_count": 98,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 13,
    "id": "594ccc33-b869-4b50-a99a-f58fe2c94604",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 14,
    "id": "57576ce0-aed2-4d1a-af47-e17d88514fbc",
    "metadata": {},
    "outputs": [
@@ -545,12 +545,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 31,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def describe_df(df):\n",
+    "    \"\"\"\n",
+    "    Función que devuelve un dataframe con \n",
+    "    * El tipo de datos por columna\n",
+    "    * El porcentaje de nulos\n",
+    "    * La cantidad de valores únicos\n",
+    "    * La cardinalidad de la columna en porcentaje\n",
+    "\n",
+    "    Argumentos:\n",
+    "    df (pandas.DataFrame): Variable dataframe de Pandas a describir.\n",
+    "    \n",
+    "\n",
+    "    Retorna:\n",
+    "    pandas.DataFrame: Dataframe\n",
+    "    \"\"\"\n",
     "    tipo_de_dato = df.dtypes\n",
     "    valores_nulos = (df.isna().mean() * 100).round(2)\n",
     "    valores_unicos = df.nunique()\n",
@@ -563,14 +577,14 @@
     "        'Cardinalidad (%)': cardinalidad\n",
     "    })\n",
     "\n",
-    "    return descripcion\n",
+    "    return descripcion.T\n",
     "    \n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 19,
    "id": "3df7192c-ab2d-45f6-8738-0948f88f4800",
    "metadata": {},
    "outputs": [
@@ -663,13 +677,14 @@
        "Cardinalidad (%)     97.81    69.18  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "describe_df(df).T"
+    "describe_df(df)\n",
+    "describe_df\n"
    ]
   },
   {
@@ -688,7 +703,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": null,
+   "id": "23dfcb73",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "id": "c3f580f5",
    "metadata": {},
    "outputs": [],
@@ -696,6 +719,26 @@
     "from scipy.stats import pearsonr\n",
     "\n",
     "def get_features_num_regression(df, target_col, umbral_corr, pvalue=None):\n",
+    "    \"\"\"\n",
+    "    Función que devuelve una lista con las columnas numéricas \n",
+    "    del dataframe cuya correlación con la columna designada \n",
+    "    por \"target_col\" sea superior en valor absoluto al valor dado \n",
+    "    por \"umbral_corr\". \n",
+    "    \n",
+    "    Además si la variable \"pvalue\" es distinta de None, sólo devolvera \n",
+    "    las columnas numéricas cuya correlación supere el valor indicado y \n",
+    "    además supere el test de hipótesis con significación \n",
+    "    mayor o igual a 1-pvalue\n",
+    "\n",
+    "    Argumentos:\n",
+    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    umbral_corr (float): Umbral de correlación, entre 0 y 1.\n",
+    "    pvalue (int): Descripción de param1.\n",
+    "\n",
+    "    Retorna:\n",
+    "    list: Lista de Python\n",
+    "    \"\"\"\n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
     "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
@@ -737,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 34,
    "id": "ad7b6370",
    "metadata": {},
    "outputs": [
@@ -745,12 +788,12 @@
      "data": {
       "text/plain": [
        "[('Último', 0.9972805808746535, 0.0),\n",
-       " ('Apertura', 0.9973535582132576, 0.0),\n",
-       " ('Máximo', 0.9972570817269241, 0.0),\n",
+       " ('Apertura', 0.9973535582132573, 0.0),\n",
+       " ('Máximo', 0.997257081726924, 0.0),\n",
        " ('Mínimo', 0.9999999999999999, 0.0)]"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,6 +801,83 @@
    "source": [
     "get_features_num_regression(df, 'Mínimo', 0.3, pvalue=0.1)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3efc5e67",
+   "metadata": {},
+   "source": [
+    "### Funcion: plot_features_num_regression\n",
+    "\n",
+    "Esta función recibe un dataframe, una argumento \"target_col\" con valor por defecto \"\", una lista de strings (\"columns\") cuyo valor por defecto es la lista vacía, un valor de correlación (\"umbral_corr\", con valor 0 por defecto) y un argumento (\"pvalue\") con valor \"None\" por defecto.\n",
+    "\n",
+    "Si la lista no está vacía, la función pintará una pairplot del dataframe considerando la columna designada por \"target_col\" y aquellas incluidas en \"column\" que cumplan que su correlación con \"target_col\" es superior en valor absoluto a \"umbral_corr\", y que, en el caso de ser pvalue diferente de \"None\", además cumplan el test de correlación para el nivel 1-pvalue de significación estadística. La función devolverá los valores de \"columns\" que cumplan con las condiciones anteriores. \n",
+    "\n",
+    "EXTRA: Se valorará adicionalmente el hecho de que si la lista de columnas a pintar es grande se pinten varios pairplot con un máximo de cinco columnas en cada pairplot (siendo siempre una de ellas la indicada por \"target_col\")\n",
+    "\n",
+    "Si la lista está vacía, entonces la función igualará \"columns\" a las variables numéricas del dataframe y se comportará como se describe en el párrafo anterior.\n",
+    "\n",
+    "De igual manera que en la función descrita anteriormente deberá hacer un check de los valores de entrada y comportarse como se describe en el último párrafo de la función `get_features_num_regresion`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "677d7da6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_features_num_regression(df,target_col=\"\", columns=[], umbral_corr=0,pvalue=None):\n",
+    "    \"\"\"\n",
+    "    Función que devuelve una lista con las columnas numéricas \n",
+    "    del dataframe cuya correlación con la columna designada \n",
+    "    por \"target_col\" sea superior en valor absoluto al valor dado \n",
+    "    por \"umbral_corr\". \n",
+    "    \n",
+    "    Además si la variable \"pvalue\" es distinta de None, sólo devolvera \n",
+    "    las columnas numéricas cuya correlación supere el valor indicado y \n",
+    "    además supere el test de hipótesis con significación \n",
+    "    mayor o igual a 1-pvalue\n",
+    "\n",
+    "    Argumentos:\n",
+    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    columns(list): Lista con los nombres de las columnas\n",
+    "    umbral_corr (float): Umbral de correlación, entre 0 y 1. Por defecto valor 0\n",
+    "    pvalue (int): \n",
+    "\n",
+    "    Retorna:\n",
+    "    sns.pairplot: Pairplot\n",
+    "    \"\"\"\n",
+    "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
+    "    if target_col not in df.columns:\n",
+    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'target_col' es una variable numérica continua\n",
+    "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
+    "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'umbral_corr' está en el rango [0, 1]\n",
+    "    if not (0 <= umbral_corr <= 1):\n",
+    "        print(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
+    "        return None\n",
+    "    \n",
+    "    # Verificamos si 'pvalue' es un valor válido\n",
+    "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
+    "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
+    "        return None\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "952b5899",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
