--- a/team_challenge/tercero/toolbox.ipynb
+++ b/team_challenge/tercero/toolbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 33,
    "id": "934736fb-9604-4a99-9808-e8daa3aea56a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 34,
    "id": "e958cccf-e70c-469f-87cf-5ebbb4fd7882",
    "metadata": {},
    "outputs": [],
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 35,
    "id": "345e4ba4",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 38,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 40,
    "id": "594ccc33-b869-4b50-a99a-f58fe2c94604",
    "metadata": {},
    "outputs": [],
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 41,
    "id": "57576ce0-aed2-4d1a-af47-e17d88514fbc",
    "metadata": {},
    "outputs": [
@@ -545,26 +545,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 51,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def describe_df(df):\n",
+    "import pandas as pd\n",
+    "def describe_df(df:pd.DataFrame):\n",
     "    \"\"\"\n",
-    "    Función que devuelve un dataframe con \n",
-    "    * El tipo de datos por columna\n",
-    "    * El porcentaje de nulos\n",
-    "    * La cantidad de valores únicos\n",
-    "    * La cardinalidad de la columna en porcentaje\n",
+    "    Función que devuelve un Dataframe  de Pandas con:\n",
+    "\n",
+    "        * El tipo de datos por columna\n",
+    "    \n",
+    "        * El porcentaje de nulos\n",
+    "        \n",
+    "        * La cantidad de valores únicos\n",
+    "        \n",
+    "        * La cardinalidad de la columna en porcentaje\n",
     "\n",
     "    Argumentos:\n",
-    "    df (pandas.DataFrame): Variable dataframe de Pandas a describir.\n",
+    "\n",
+    "    df (DataFrame): Variable dataframe de Pandas a describir.\n",
     "    \n",
     "\n",
     "    Retorna:\n",
     "    pandas.DataFrame: Dataframe\n",
     "    \"\"\"\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise TypeError(f\"El parámetro debe ser un Dataframe de Pandas\")\n",
     "    tipo_de_dato = df.dtypes\n",
     "    valores_nulos = (df.isna().mean() * 100).round(2)\n",
     "    valores_unicos = df.nunique()\n",
@@ -584,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 49,
    "id": "3df7192c-ab2d-45f6-8738-0948f88f4800",
    "metadata": {},
    "outputs": [
@@ -677,14 +685,14 @@
        "Cardinalidad (%)     97.81    69.18  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "describe_df(df)\n",
-    "describe_df\n"
+    "\n"
    ]
   },
   {
@@ -703,22 +711,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "23dfcb73",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 61,
    "id": "c3f580f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import pearsonr\n",
-    "\n",
-    "def get_features_num_regression(df, target_col, umbral_corr, pvalue=None):\n",
+    "import pandas as pd\n",
+    "def get_features_num_regression(df:pd.DataFrame, target_col:str, umbral_corr:float, pvalue=None):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas numéricas \n",
     "    del dataframe cuya correlación con la columna designada \n",
@@ -731,33 +731,48 @@
     "    mayor o igual a 1-pvalue\n",
     "\n",
     "    Argumentos:\n",
+    "    \n",
     "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
-    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    \n",
+    "    target_col (list): Nombre de la columna target de un modelo de regresión\n",
+    "    \n",
     "    umbral_corr (float): Umbral de correlación, entre 0 y 1.\n",
+    "    \n",
     "    pvalue (int): Descripción de param1.\n",
     "\n",
     "    Retorna:\n",
+    "    \n",
     "    list: Lista de Python\n",
     "    \"\"\"\n",
+    "    # Verificamos el tipo en la variable df\n",
+    "    if not isinstance(df, pd.DataFrame):\n",
+    "        raise TypeError(f\"El primer parámetro debe ser un Dataframe de Pandas\")\n",
+    "    # Verificamos el tipo en la variable target_col\n",
+    "    if not isinstance(target_col, str):\n",
+    "        raise TypeError(f\"El parámetro target_col debe ser un string\")\n",
+    "    # Verificamos el tipo en la variable umbral_corr\n",
+    "    if not isinstance(umbral_corr, float):\n",
+    "        raise TypeError(f\"El parámetro umbral_corr debe ser un float\")\n",
+    "    \n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
-    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
-    "        return None\n",
+    "        raise TypeError(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
+    "\n",
     "\n",
     "    # Verificamos si 'target_col' es una variable numérica continua\n",
     "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
-    "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
-    "        return None\n",
+    "        raise TypeError(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
+    "\n",
     "\n",
     "    # Verificamos si 'umbral_corr' está en el rango [0, 1]\n",
     "    if not (0 <= umbral_corr <= 1):\n",
-    "        print(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
-    "        return None\n",
+    "        raise TypeError(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
+    "\n",
     "    \n",
     "    # Verificamos si 'pvalue' es un valor válido\n",
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
-    "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
-    "        return None\n",
+    "        raise TypeError(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
+    "\n",
     "\n",
     "    # Obtenemos las columnas numéricas del dataframe\n",
     "    cols_numericas = df.select_dtypes(include=[np.number]).columns\n",
@@ -780,7 +795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 63,
    "id": "ad7b6370",
    "metadata": {},
    "outputs": [
@@ -793,12 +808,13 @@
        " ('Mínimo', 0.9999999999999999, 0.0)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "\n",
     "get_features_num_regression(df, 'Mínimo', 0.3, pvalue=0.1)\n"
    ]
   },
@@ -822,12 +838,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "id": "677d7da6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_features_num_regression(df,target_col=\"\", columns=[], umbral_corr=0,pvalue=None):\n",
+    "import pandas as pd\n",
+    "def plot_features_num_regression(df:pd.DataFrame,target_col=\"\", columns=list(\"\"), umbral_corr=0.0,pvalue=None):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas numéricas \n",
     "    del dataframe cuya correlación con la columna designada \n",
@@ -840,13 +857,19 @@
     "    mayor o igual a 1-pvalue\n",
     "\n",
     "    Argumentos:\n",
+    "    \n",
     "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    \n",
     "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    \n",
     "    columns(list): Lista con los nombres de las columnas\n",
+    "    \n",
     "    umbral_corr (float): Umbral de correlación, entre 0 y 1. Por defecto valor 0\n",
+    "    \n",
     "    pvalue (int): \n",
     "\n",
     "    Retorna:\n",
+    "\n",
     "    sns.pairplot: Pairplot\n",
     "    \"\"\"\n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
@@ -872,12 +895,126 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "id": "952b5899",
    "metadata": {},
+   "source": [
+    "### Funcion: get_features_cat_regression\n",
+    "\n",
+    "Esta función recibe como argumentos un dataframe, el nombre de una de las columnas del mismo (argumento 'target_col'), que debería ser el target de un hipotético modelo de regresión, es decir debe ser una variable numérica continua o discreta pero con alta cardinalidad y una variable float \"pvalue\" cuyo valor por defecto será 0.05.\n",
+    "\n",
+    "La función debe devolver una lista con las columnas categóricas del dataframe cuyo test de relación con la columna designada por 'target_col' supere en confianza estadística el test de relación que sea necesario hacer (es decir la función debe poder escoger cuál de los dos test que hemos aprendido tiene que hacer).\n",
+    "\n",
+    "La función debe hacer todas las comprobaciones necesarias para no dar error como consecuecia de los valores de entrada. Es decir hará un check de los valores asignados a los argumentos de entrada y si estos no son adecuados debe retornar None y printar por pantalla la razón de este comportamiento. Ojo entre las comprobaciones debe estar que \"target_col\" hace referencia a una variable numérica continua del dataframe."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "53e4b20a",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd\n",
+    "def get_features_cat_regression(df:pd.DataFrame,target_col:list=[], pvalue=0.05):\n",
+    "    \"\"\"\n",
+    "    Función que devuelve una lista con las columnas categóricas del \n",
+    "    dataframe cuyo test de relación con la columna designada por \n",
+    "    'target_col' supere en confianza estadística el test de relación \n",
+    "    que sea necesario \n",
+    "    \n",
+    "    Argumentos:\n",
+    "    \n",
+    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    \n",
+    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    \n",
+    "    pvalue (float): Por defecto valor 0.05\n",
+    "\n",
+    "    Retorna:\n",
+    "\n",
+    "    list: columnas categóricas del dataframe cuyo test de relación con la columna designada por 'target_col' supere en confianza estadística el test de relación que sea necesario hacer\n",
+    "    \"\"\"\n",
+    "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
+    "    if target_col not in df.columns:\n",
+    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'target_col' es una variable numérica continua\n",
+    "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
+    "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'pvalue' es un valor válido\n",
+    "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
+    "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
+    "        return None\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6ca9fe1e",
+   "metadata": {},
+   "source": [
+    "### Funcion: plot_features_cat_regression\n",
+    "Esta función recibe un dataframe, una argumento \"target_col\" con valor por defecto \"\", una lista de strings (\"columns\") cuyo valor por defecto es la lista vacía, un argumento (\"pvalue\") con valor 0.05 por defecto y un argumento \"with_individual_plot\" a False.\n",
+    "\n",
+    "Si la lista no está vacía, la función pintará los histogramas agrupados de la variable \"target_col\" para cada uno de los valores de las variables categóricas incluidas en columns que cumplan que su test de relación con \"target_col\" es significatio para el nivel 1-pvalue de significación estadística. La función devolverá los valores de \"columns\" que cumplan con las condiciones anteriores. \n",
+    "\n",
+    "Si la lista está vacía, entonces la función igualará \"columns\" a las variables numéricas del dataframe y se comportará como se describe en el párrafo anterior.\n",
+    "\n",
+    "De igual manera que en la función descrita anteriormente deberá hacer un check de los valores de entrada y comportarse como se describe en el último párrafo de la función `get_features_cat_regression`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "04d1e976",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", columns:list=[],pvalue=0.05,with_indivual_plot=False):\n",
+    "    \"\"\"\n",
+    "    Función que pintará los histogramas agrupados de la variable \"target_col\"\n",
+    "    para cada uno de los valores de las variables categóricas incluidas en \n",
+    "    columns que cumplan que su test de relación con \"target_col\" es \n",
+    "    significatio para el nivel 1-pvalue de significación estadística. \n",
+    "    La función devolverá los valores de \"columns\" que cumplan con las \n",
+    "    condiciones anteriores. \n",
+    "    \n",
+    "    Argumentos:\n",
+    "    \n",
+    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    \n",
+    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    \n",
+    "    columns(list): Lista con los nombres de las columnas\n",
+    "    \n",
+    "    pvalue (float): Por defecto valor 0.05\n",
+    "\n",
+    "    with_indivual_plot(boolean): Por defector valor False\n",
+    "\n",
+    "    Retorna:\n",
+    "\n",
+    "    sns.pairplot: Pairplot\n",
+    "    \"\"\"\n",
+    "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
+    "    if target_col not in df.columns:\n",
+    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'target_col' es una variable numérica continua\n",
+    "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
+    "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
+    "        return None\n",
+    "\n",
+    "    # Verificamos si 'pvalue' es un valor válido\n",
+    "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
+    "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
+    "        return None\n",
+    "    pass"
+   ]
   }
  ],
  "metadata": {
