--- a/team_challenge/tercero/toolbox.ipynb
+++ b/team_challenge/tercero/toolbox.ipynb
@@ -738,7 +738,7 @@
     "    \n",
     "    umbral_corr (float): Umbral de correlación, entre 0 y 1.\n",
     "    \n",
-    "    pvalue (int): Descripción de param1.\n",
+    "    pvalue (float): Descripción de param1.\n",
     "\n",
     "    Retorna:\n",
     "    \n",
@@ -753,7 +753,8 @@
     "    # Verificamos el tipo en la variable umbral_corr\n",
     "    if not isinstance(umbral_corr, float):\n",
     "        raise TypeError(f\"El parámetro umbral_corr debe ser un float\")\n",
-    "    \n",
+    "\n",
+    "                        \n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
     "        raise TypeError(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
@@ -769,7 +770,7 @@
     "        raise TypeError(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
     "\n",
     "    \n",
-    "    # Verificamos si 'pvalue' es un valor válido\n",
+    "    # Verificamos si 'pvalue' es None, float o int y además un valor válido\n",
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
     "        raise TypeError(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
     "\n",
@@ -872,6 +873,7 @@
     "\n",
     "    sns.pairplot: Pairplot\n",
     "    \"\"\"\n",
+    "    \n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
     "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
