--- a/team_challenge/tercero/toolbox.ipynb
+++ b/team_challenge/tercero/toolbox.ipynb
@@ -545,7 +545,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
+   "id": "a0162533",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def example_function(parameter):\n",
+    "    \"\"\"\n",
+    "    This is a function.\n",
+    "\n",
+    "    - **Note:** This text is in bold.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - `parameter` (int): Description of the parameter.\n",
+    "\n",
+    "    Returns:\n",
+    "    int: The result of the function.\n",
+    "    \"\"\"\n",
+    "    # Function implementation\n",
+    "    return 42"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
@@ -565,12 +588,13 @@
     "\n",
     "    Argumentos:\n",
     "\n",
-    "    df (DataFrame): Variable dataframe de Pandas a describir.\n",
+    "    `df` (DataFrame): Variable dataframe de Pandas a describir.\n",
     "    \n",
     "\n",
     "    Retorna:\n",
     "    pandas.DataFrame: Dataframe\n",
     "    \"\"\"\n",
+    "\n",
     "    if not isinstance(df, pd.DataFrame):\n",
     "        raise TypeError(f\"El parámetro debe ser un Dataframe de Pandas\")\n",
     "    tipo_de_dato = df.dtypes\n",
@@ -732,13 +756,13 @@
     "\n",
     "    Argumentos:\n",
     "    \n",
-    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    `df` (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
     "    \n",
-    "    target_col (list): Nombre de la columna target de un modelo de regresión\n",
+    "    `target_col` (list): Nombre de la columna target de un modelo de regresión\n",
     "    \n",
-    "    umbral_corr (float): Umbral de correlación, entre 0 y 1.\n",
+    "    `umbral_corr` (float): Umbral de correlación, entre 0 y 1.\n",
     "    \n",
-    "    pvalue (float): Descripción de param1.\n",
+    "    `pvalue` (float): Descripción de param1.\n",
     "\n",
     "    Retorna:\n",
     "    \n",
@@ -859,15 +883,15 @@
     "\n",
     "    Argumentos:\n",
     "    \n",
-    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    `df` (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
     "    \n",
-    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    `target_col` (string): Nombre de la columna target de un modelo de regresión\n",
     "    \n",
-    "    columns(list): Lista con los nombres de las columnas\n",
+    "    `columns` (list): Lista con los nombres de las columnas\n",
     "    \n",
-    "    umbral_corr (float): Umbral de correlación, entre 0 y 1. Por defecto valor 0\n",
+    "    `umbral_corr` (float): Umbral de correlación, entre 0 y 1. Por defecto valor 0\n",
     "    \n",
-    "    pvalue (int): \n",
+    "    `pvalue` (int): Valor de significación estadística\n",
     "\n",
     "    Retorna:\n",
     "\n",
@@ -912,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
@@ -927,11 +951,11 @@
     "    \n",
     "    Argumentos:\n",
     "    \n",
-    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    `df` (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
     "    \n",
-    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    `target_col` (string): Nombre de la columna target de un modelo de regresión\n",
     "    \n",
-    "    pvalue (float): Por defecto valor 0.05\n",
+    "    `pvalue` (float): Valor de significación estadística. Por defecto valor 0.05\n",
     "\n",
     "    Retorna:\n",
     "\n",
