--- a/team_challenge/tercero/javier/toolbox.ipynb
+++ b/team_challenge/tercero/javier/toolbox.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 1,
    "id": "934736fb-9604-4a99-9808-e8daa3aea56a",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 2,
    "id": "e958cccf-e70c-469f-87cf-5ebbb4fd7882",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "7aca7a16-4caa-473b-b5b0-3cf9177e8672",
    "metadata": {},
    "outputs": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fb27737b-6955-44f3-ad78-947d73f73928",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "freq         5  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "9b5c81ca-5e86-4fcb-89d2-652ff5663393",
    "metadata": {},
    "outputs": [
@@ -258,7 +258,7 @@
        "4  24.11.2023  15.980,11  15.972,89  16.007,42  15.940,62   68,57M  -0,13%"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "id": "345e4ba4",
    "metadata": {},
    "outputs": [],
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 9,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "4a40612f",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[503 rows x 7 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -510,7 +510,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
+   "id": "edb68de7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Index: 503 entries, 0 to 503\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column    Non-Null Count  Dtype         \n",
+      "---  ------    --------------  -----         \n",
+      " 0   Fecha     503 non-null    datetime64[ns]\n",
+      " 1   Último    503 non-null    float64       \n",
+      " 2   Apertura  503 non-null    float64       \n",
+      " 3   Máximo    503 non-null    float64       \n",
+      " 4   Mínimo    503 non-null    float64       \n",
+      " 5   Vol.      503 non-null    float64       \n",
+      " 6   % var.    503 non-null    float64       \n",
+      "dtypes: datetime64[ns](1), float64(6)\n",
+      "memory usage: 31.4 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "594ccc33-b869-4b50-a99a-f58fe2c94604",
    "metadata": {},
    "outputs": [],
@@ -520,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "57576ce0-aed2-4d1a-af47-e17d88514fbc",
    "metadata": {},
    "outputs": [
@@ -545,7 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "a0162533",
    "metadata": {},
    "outputs": [],
@@ -568,7 +599,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
+   "id": "f52db05b-30af-4e8d-b6f9-ba54b5f64155",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function example_function in module __main__:\n",
+      "\n",
+      "example_function(parameter)\n",
+      "    This is a function.\n",
+      "    \n",
+      "    - **Note:** This text is in bold.\n",
+      "    \n",
+      "    Parameters:\n",
+      "    - `parameter` (int): Description of the parameter.\n",
+      "    \n",
+      "    Returns:\n",
+      "    int: The result of the function.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(example_function)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6c40077b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_ejemplo(cadena:str):\n",
+    "    \"\"\"_summary_\n",
+    "    \n",
+    "    **Args:**\n",
+    "        `cadena` (str): _description_\n",
+    "    \"\"\"\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
@@ -616,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "id": "3df7192c-ab2d-45f6-8738-0948f88f4800",
    "metadata": {},
    "outputs": [
@@ -709,7 +786,7 @@
        "Cardinalidad (%)     97.81    69.18  "
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -735,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 17,
    "id": "c3f580f5",
    "metadata": {},
    "outputs": [],
@@ -863,12 +940,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "677d7da6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "#plot lo hace julio\n",
     "def plot_features_num_regression(df:pd.DataFrame,target_col=\"\", columns=list(\"\"), umbral_corr=0.0,pvalue=None):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas numéricas \n",
@@ -936,12 +1014,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from scipy.stats import ttest_ind\n",
+    "#esta la hace Jorge\n",
     "def get_features_cat_regression(df:pd.DataFrame,target_col:list=[], pvalue=0.05):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas categóricas del \n",
@@ -961,6 +1041,7 @@
     "\n",
     "    list: columnas categóricas del dataframe cuyo test de relación con la columna designada por 'target_col' supere en confianza estadística el test de relación que sea necesario hacer\n",
     "    \"\"\"\n",
+    "    lista_de_categoricas=list()\n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
     "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
@@ -975,7 +1056,10 @@
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
     "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
     "        return None\n",
-    "    pass"
+    "    #realizar test de relación de confianza\n",
+    "    df_categoricas=df.drop(target_col,axis=1)\n",
+    "    \n",
+    "    return lista_de_categoricas\n"
    ]
   },
   {
@@ -995,11 +1079,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "04d1e976",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#\n",
     "def plot_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", columns:list=[],pvalue=0.05,with_indivual_plot=False):\n",
     "    \"\"\"\n",
     "    Función que pintará los histogramas agrupados de la variable \"target_col\"\n",
