--- a/team_challenge/tercero/jorge/toolbox.ipynb
+++ b/team_challenge/tercero/jorge/toolbox.ipynb
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "ad77aced",
    "metadata": {},
    "outputs": [],
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a91c2210-0994-422e-a20c-3a26e13fdcc0",
    "metadata": {},
    "outputs": [],
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "b3d07c75",
    "metadata": {},
    "outputs": [],
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "e986ef5c",
    "metadata": {},
    "outputs": [],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "4a40612f",
    "metadata": {},
    "outputs": [
@@ -499,7 +499,7 @@
        "[503 rows x 7 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "f52db05b-30af-4e8d-b6f9-ba54b5f64155",
    "metadata": {},
    "outputs": [
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "6c40077b",
    "metadata": {},
    "outputs": [],
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 37,
    "id": "c65ba6eb-2149-4ad4-84cf-9c0144aeb7a8",
    "metadata": {},
    "outputs": [],
@@ -669,7 +669,8 @@
     "    \n",
     "\n",
     "    Retorna:\n",
-    "    pandas.DataFrame: Dataframe\n",
+    "    \n",
+    "    `pandas.DataFrame`: Dataframe con el tipo de dato, el porcentaje de valores nulos, cantidad de valores únicos y el porcentaje de cardinalidad\n",
     "    \"\"\"\n",
     "\n",
     "    if not isinstance(df, pd.DataFrame):\n",
@@ -693,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 19,
    "id": "3df7192c-ab2d-45f6-8738-0948f88f4800",
    "metadata": {},
    "outputs": [
@@ -786,7 +787,7 @@
        "Cardinalidad (%)     97.81    69.18  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,34 +813,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 38,
    "id": "c3f580f5",
    "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.stats import pearsonr\n",
     "import pandas as pd\n",
-    "def get_features_num_regression(df:pd.DataFrame, target_col:str, umbral_corr:float, pvalue=None):\n",
+    "def get_features_num_regression(df:pd.DataFrame, target_col:str, umbral_corr:float, pvalue:float=None):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas numéricas \n",
     "    del dataframe cuya correlación con la columna designada \n",
-    "    por \"target_col\" sea superior en valor absoluto al valor dado \n",
-    "    por \"umbral_corr\". \n",
+    "    por `target_col` sea superior en valor absoluto al valor dado \n",
+    "    por `umbral_corr` . \n",
     "    \n",
-    "    Además si la variable \"pvalue\" es distinta de None, sólo devolvera \n",
+    "    Además si la variable `pvalue` es distinta de None, sólo devolvera \n",
     "    las columnas numéricas cuya correlación supere el valor indicado y \n",
     "    además supere el test de hipótesis con significación \n",
-    "    mayor o igual a 1-pvalue\n",
+    "    mayor o igual a `1-pvalue`\n",
     "\n",
     "    Argumentos:\n",
     "    \n",
     "    `df` (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
     "    \n",
-    "    `target_col` (list): Nombre de la columna target de un modelo de regresión\n",
+    "    `target_col` (list): Nombre de la columna target de un modelo de regresión.\n",
     "    \n",
     "    `umbral_corr` (float): Umbral de correlación, entre 0 y 1.\n",
     "    \n",
-    "    `pvalue` (float): Descripción de param1.\n",
+    "    `pvalue` (float): Valor de p-value por defecto es de tipo `None`.\n",
     "\n",
     "    Retorna:\n",
     "    \n",
@@ -897,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 21,
    "id": "ad7b6370",
    "metadata": {},
    "outputs": [
@@ -905,12 +906,12 @@
      "data": {
       "text/plain": [
        "[('Último', 0.9972805808746535, 0.0),\n",
-       " ('Apertura', 0.9973535582132573, 0.0),\n",
-       " ('Máximo', 0.997257081726924, 0.0),\n",
+       " ('Apertura', 0.9973535582132576, 0.0),\n",
+       " ('Máximo', 0.9972570817269242, 0.0),\n",
        " ('Mínimo', 0.9999999999999999, 0.0)]"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -940,14 +941,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "id": "677d7da6",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "#plot lo hace julio\n",
-    "def plot_features_num_regression(df:pd.DataFrame,target_col=\"\", columns=list(\"\"), umbral_corr=0.0,pvalue=None):\n",
+    "def plot_features_num_regression(df:pd.DataFrame,target_col=\"\", columns=list(\"\"), umbral_corr=0.0,pvalue:float=None):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas numéricas \n",
     "    del dataframe cuya correlación con la columna designada \n",
@@ -1014,7 +1015,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
@@ -1022,7 +1023,7 @@
     "import pandas as pd\n",
     "from scipy.stats import ttest_ind\n",
     "#esta la hace Jorge\n",
-    "def get_features_cat_regression(df:pd.DataFrame,target_col:list=[], pvalue=0.05):\n",
+    "def get_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", pvalue=0.05):\n",
     "    \"\"\"\n",
     "    Función que devuelve una lista con las columnas categóricas del \n",
     "    dataframe cuyo test de relación con la columna designada por \n",
@@ -1046,20 +1047,339 @@
     "    if target_col not in df.columns:\n",
     "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
     "        return None\n",
-    "\n",
     "    # Verificamos si 'target_col' es una variable numérica continua\n",
     "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
     "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
     "        return None\n",
-    "\n",
     "    # Verificamos si 'pvalue' es un valor válido\n",
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
     "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
     "        return None\n",
     "    #realizar test de relación de confianza\n",
     "    df_categoricas=df.drop(target_col,axis=1)\n",
-    "    \n",
+    "    for col in df_categoricas.columns:\n",
+    "        if not np.issubdtype(df[col].dtype, np.number):\n",
+    "            lista_de_categoricas.append(col)\n",
+    "        \n",
     "    return lista_de_categoricas\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "id": "95c9a921",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"variacion\"]=\"Bajó\"\n",
+    "df.loc[df[\"% var.\"]>0,\"variacion\"]=\"Subió\"\n",
+    "df.loc[df[\"% var.\"]==0.0,\"variacion\"]=\"Sin cambios\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "ce83cbe4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "variacion\n",
+       "Bajó           251\n",
+       "Subió          251\n",
+       "Sin cambios      1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.variacion.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "8ba3afd5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fecha',\n",
+       " 'Último',\n",
+       " 'Apertura',\n",
+       " 'Máximo',\n",
+       " 'Mínimo',\n",
+       " 'Vol.',\n",
+       " '% var.',\n",
+       " 'variacion']"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns.to_list()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "ef8677c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Fecha', 'variacion']"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_features_cat_regression(df,\"Mínimo\",0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "id": "45289d82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc3f18b1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "9484f068",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Último</th>\n",
+       "      <th>Apertura</th>\n",
+       "      <th>Máximo</th>\n",
+       "      <th>Mínimo</th>\n",
+       "      <th>Vol.</th>\n",
+       "      <th>% var.</th>\n",
+       "      <th>variacion</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2023-11-30</td>\n",
+       "      <td>15947.87</td>\n",
+       "      <td>15986.40</td>\n",
+       "      <td>16011.98</td>\n",
+       "      <td>15825.83</td>\n",
+       "      <td>4.445400e+10</td>\n",
+       "      <td>-0.25</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-11-29</td>\n",
+       "      <td>15987.60</td>\n",
+       "      <td>16111.59</td>\n",
+       "      <td>16166.18</td>\n",
+       "      <td>15976.69</td>\n",
+       "      <td>2.309800e+10</td>\n",
+       "      <td>-0.14</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2023-11-28</td>\n",
+       "      <td>16010.43</td>\n",
+       "      <td>15939.12</td>\n",
+       "      <td>16031.38</td>\n",
+       "      <td>15921.45</td>\n",
+       "      <td>2.385900e+10</td>\n",
+       "      <td>0.30</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2023-11-27</td>\n",
+       "      <td>15961.98</td>\n",
+       "      <td>15971.05</td>\n",
+       "      <td>16045.30</td>\n",
+       "      <td>15933.04</td>\n",
+       "      <td>2.154500e+10</td>\n",
+       "      <td>-0.11</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2023-11-24</td>\n",
+       "      <td>15980.11</td>\n",
+       "      <td>15972.89</td>\n",
+       "      <td>16007.42</td>\n",
+       "      <td>15940.62</td>\n",
+       "      <td>6.857000e+09</td>\n",
+       "      <td>-0.13</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>499</th>\n",
+       "      <td>2021-12-06</td>\n",
+       "      <td>15846.16</td>\n",
+       "      <td>15744.91</td>\n",
+       "      <td>15898.59</td>\n",
+       "      <td>15557.78</td>\n",
+       "      <td>2.445300e+10</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500</th>\n",
+       "      <td>2021-12-03</td>\n",
+       "      <td>15712.04</td>\n",
+       "      <td>16039.41</td>\n",
+       "      <td>16089.61</td>\n",
+       "      <td>15543.31</td>\n",
+       "      <td>2.876900e+10</td>\n",
+       "      <td>-1.74</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>501</th>\n",
+       "      <td>2021-12-02</td>\n",
+       "      <td>15990.76</td>\n",
+       "      <td>15791.30</td>\n",
+       "      <td>16066.32</td>\n",
+       "      <td>15770.92</td>\n",
+       "      <td>2.521000e+10</td>\n",
+       "      <td>0.71</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>502</th>\n",
+       "      <td>2021-12-01</td>\n",
+       "      <td>15877.72</td>\n",
+       "      <td>16347.96</td>\n",
+       "      <td>16427.19</td>\n",
+       "      <td>15864.00</td>\n",
+       "      <td>2.535500e+10</td>\n",
+       "      <td>-1.60</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>503</th>\n",
+       "      <td>2021-11-30</td>\n",
+       "      <td>16135.92</td>\n",
+       "      <td>16333.95</td>\n",
+       "      <td>16454.56</td>\n",
+       "      <td>16073.76</td>\n",
+       "      <td>4.124900e+10</td>\n",
+       "      <td>-1.61</td>\n",
+       "      <td>Bajó</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>503 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Fecha    Último  Apertura    Máximo    Mínimo          Vol.  % var.  \\\n",
+       "0   2023-11-30  15947.87  15986.40  16011.98  15825.83  4.445400e+10   -0.25   \n",
+       "1   2023-11-29  15987.60  16111.59  16166.18  15976.69  2.309800e+10   -0.14   \n",
+       "2   2023-11-28  16010.43  15939.12  16031.38  15921.45  2.385900e+10    0.30   \n",
+       "3   2023-11-27  15961.98  15971.05  16045.30  15933.04  2.154500e+10   -0.11   \n",
+       "4   2023-11-24  15980.11  15972.89  16007.42  15940.62  6.857000e+09   -0.13   \n",
+       "..         ...       ...       ...       ...       ...           ...     ...   \n",
+       "499 2021-12-06  15846.16  15744.91  15898.59  15557.78  2.445300e+10    0.85   \n",
+       "500 2021-12-03  15712.04  16039.41  16089.61  15543.31  2.876900e+10   -1.74   \n",
+       "501 2021-12-02  15990.76  15791.30  16066.32  15770.92  2.521000e+10    0.71   \n",
+       "502 2021-12-01  15877.72  16347.96  16427.19  15864.00  2.535500e+10   -1.60   \n",
+       "503 2021-11-30  16135.92  16333.95  16454.56  16073.76  4.124900e+10   -1.61   \n",
+       "\n",
+       "    variacion  \n",
+       "0        Bajó  \n",
+       "1        Bajó  \n",
+       "2        Bajó  \n",
+       "3        Bajó  \n",
+       "4        Bajó  \n",
+       "..        ...  \n",
+       "499      Bajó  \n",
+       "500      Bajó  \n",
+       "501      Bajó  \n",
+       "502      Bajó  \n",
+       "503      Bajó  \n",
+       "\n",
+       "[503 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
@@ -1079,7 +1399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "04d1e976",
    "metadata": {},
    "outputs": [],
@@ -1096,15 +1416,15 @@
     "    \n",
     "    Argumentos:\n",
     "    \n",
-    "    df (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
+    "    `df` (pandas.DataFrame): Variable que contiene dataframe de Pandas.\n",
     "    \n",
-    "    target_col (string): Nombre de la columna target de un modelo de regresión\n",
+    "    `target_col` (string): Nombre de la columna target de un modelo de regresión\n",
     "    \n",
-    "    columns(list): Lista con los nombres de las columnas\n",
+    "    `columns`  (list): Lista con los nombres de las columnas\n",
     "    \n",
-    "    pvalue (float): Por defecto valor 0.05\n",
+    "    `pvalue` (float): Por defecto valor 0.05\n",
     "\n",
-    "    with_indivual_plot(boolean): Por defector valor False\n",
+    "    `with_indivual_plot` (boolean): Por defector valor False\n",
     "\n",
     "    Retorna:\n",
     "\n",
