--- a/team_challenge/tercero/jorge/toolbox.ipynb
+++ b/team_challenge/tercero/jorge/toolbox.ipynb
@@ -848,34 +848,36 @@
     "    \"\"\"\n",
     "    # Verificamos el tipo en la variable df\n",
     "    if not isinstance(df, pd.DataFrame):\n",
-    "        raise TypeError(f\"El primer parámetro debe ser un Dataframe de Pandas\")\n",
+    "        print(f\"El primer parámetro debe ser un Dataframe de Pandas\")\n",
+    "        return None\n",
     "    # Verificamos el tipo en la variable target_col\n",
     "    if not isinstance(target_col, str):\n",
-    "        raise TypeError(f\"El parámetro target_col debe ser un string\")\n",
+    "        print(f\"El parámetro target_col debe ser un string\")\n",
+    "        return None\n",
     "    # Verificamos el tipo en la variable umbral_corr\n",
     "    if not isinstance(umbral_corr, float):\n",
-    "        raise TypeError(f\"El parámetro umbral_corr debe ser un float\")\n",
-    "\n",
+    "        print(f\"El parámetro umbral_corr debe ser un float\")\n",
+    "        return None\n",
     "                        \n",
     "    # Verificamos si existe algún error al llamar a la columna 'target_col'\n",
     "    if target_col not in df.columns:\n",
-    "        raise TypeError(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
-    "\n",
+    "        print(f\"Error: La columna '{target_col}' no está bien indicada, no se puede asignar como 'target_col'.\")\n",
+    "        return None\n",
     "\n",
     "    # Verificamos si 'target_col' es una variable numérica continua\n",
     "    if not np.issubdtype(df[target_col].dtype, np.number):\n",
-    "        raise TypeError(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
-    "\n",
+    "        print(f\"Error: La columna '{target_col}' no es una variable numérica continua.\")\n",
+    "        return None\n",
     "\n",
     "    # Verificamos si 'umbral_corr' está en el rango [0, 1]\n",
     "    if not (0 <= umbral_corr <= 1):\n",
-    "        raise TypeError(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
-    "\n",
+    "        print(\"Error: Se ha indicado un 'umbral_corr' incorrecto, debe estar entre el rango [0, 1].\")\n",
+    "        return None\n",
     "    \n",
     "    # Verificamos si 'pvalue' es None, float o int y además un valor válido\n",
     "    if pvalue is not None and (not isinstance(pvalue, (float, int)) or pvalue <= 0 or pvalue >= 1):\n",
-    "        raise TypeError(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
-    "\n",
+    "        print(\"Error: Si 'pvalue' no es 'None', debe tener un valor entre (0, 1).\")\n",
+    "        return None\n",
     "\n",
     "    # Obtenemos las columnas numéricas del dataframe\n",
     "    cols_numericas = df.select_dtypes(include=[np.number]).columns\n",
@@ -1015,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "id": "53e4b20a",
    "metadata": {},
    "outputs": [],
@@ -1057,16 +1059,17 @@
     "        return None\n",
     "    #realizar test de relación de confianza\n",
     "    df_categoricas=df.drop(target_col,axis=1)\n",
-    "    for col in df_categoricas.columns:\n",
-    "        if not np.issubdtype(df[col].dtype, np.number):\n",
-    "            lista_de_categoricas.append(col)\n",
-    "        \n",
+    "    for columna in df_categoricas.columns:\n",
+    "        if not np.issubdtype(df[columna].dtype, np.number):\n",
+    "            if not np.issubdtype(df[columna].dtype, np.datetime64):\n",
+    "                lista_de_categoricas.append(columna)\n",
+    "    \n",
     "    return lista_de_categoricas\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 70,
    "id": "95c9a921",
    "metadata": {},
    "outputs": [],
@@ -1078,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 71,
    "id": "ce83cbe4",
    "metadata": {},
    "outputs": [
@@ -1092,7 +1095,7 @@
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1131,17 +1134,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 77,
    "id": "ef8677c8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['Fecha', 'variacion']"
+       "['variacion']"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1167,9 +1170,7 @@
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "lista"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1404,7 +1405,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#\n",
+    "#Javi\n",
     "def plot_features_cat_regression(df:pd.DataFrame,target_col:str=\"\", columns:list=[],pvalue=0.05,with_indivual_plot=False):\n",
     "    \"\"\"\n",
     "    Función que pintará los histogramas agrupados de la variable \"target_col\"\n",
